WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40249
[Qt] EditorClientQt.h has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40249
Summary
[Qt] EditorClientQt.h has coding-style errors
Anders Bakken
Reported
2010-06-07 11:51:08 PDT
[Qt] EditorClientQt.h has coding-style errors
Attachments
Patch
(1.14 KB, patch)
2010-06-07 11:51 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 11:51:29 PDT
Created
attachment 58063
[details]
Patch
Laszlo Gombos
Comment 2
2010-06-08 13:28:57 PDT
Is this coding style rule captured somewhere ? I could not find it on
http://webkit.org/coding/coding-style.html
.
Kenneth Rohde Christiansen
Comment 3
2010-06-08 13:42:04 PDT
Comment on
attachment 58063
[details]
Patch It is in the style guide alright :-) it has to use the same case as the filename. The filename has .h and not .H :-) dot should be substituted by a _
Kenneth Rohde Christiansen
Comment 4
2010-06-08 13:42:52 PDT
(In reply to
comment #2
)
> Is this coding style rule captured somewhere ? I could not find it on
http://webkit.org/coding/coding-style.html
.
14. #define, #ifdef "header guards" should be named exactly the same as the file (including case), replacing the '.' with a '_'.
WebKit Commit Bot
Comment 5
2010-06-09 16:26:02 PDT
Comment on
attachment 58063
[details]
Patch Clearing flags on attachment: 58063 Committed
r60923
: <
http://trac.webkit.org/changeset/60923
>
WebKit Commit Bot
Comment 6
2010-06-09 16:26:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug