2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] EditorClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40249

        * WebCoreSupport/EditorClientQt.h:

Canonical link: https://commits.webkit.org/51938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60923 268f45cc-cd09-0410-ab3c-d52691b4dbfc